--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -8,10 +8,9 @@
             *{margin:0; padding:0}
             #nav{width:650px; margin:auto;text-align: center}
             #nav h3{ cursor:pointer; line-height:30px; height:30px; background-color: white;
-              color: black;font-weight: bolder;font-family: "华文行楷";}
-            #nav h2{ cursor:pointer; line-height:30px; height:30px; background-color: yellow;
-              color: black;font-weight: bolder;font-family:"行楷";}
+              color: black;font-weight: bolder;font-family: "行楷";}
             #nav a{display:block; line-height:24px;color:white}
+            #nav div{font-family: "行楷";}
             #nav a:hover{background-color:#eee; color:#000;}
             #nav div{display:none; border:1px solid #000; border-top:none}
             #space{background: black;height: 100px}
