--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -32,7 +32,7 @@
 <div id="nav">
     <h3>MyBatis知识架构整理</h3>
     <div>
-        <a href="maven-summary/maven-01.html">一：Maven的基本概念</a>
+        <a href="mybatis/pages/mybatis-01.html">MyBatis介绍以及增删改查操作</a>
     </div>
 </div>
 </body>
