--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -33,6 +33,7 @@
     <h3>MyBatis知识架构整理</h3>
     <div>
         <a href="mybatis/pages/mybatis-01.html">MyBatis介绍以及增删改查操作</a>
+        <a href="mybatis/pages/mybatis-02.html">MyBatis配置文件的优化</a>
     </div>
 </div>
 </body>
