--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -32,8 +32,9 @@
 <div id="nav">
     <h3>MyBatis知识架构整理</h3>
     <div>
-        <a href="mybatis/pages/mybatis-01.html">MyBatis介绍以及增删改查操作</a>
-        <a href="mybatis/pages/mybatis-02.html">MyBatis配置文件的优化</a>
+        <a href="mybatis/pages/mybatis-01.html">1、MyBatis介绍以及增删改查操作</a>
+        <a href="mybatis/pages/mybatis-02.html">2、MyBatis配置文件的优化</a>
+        <a href="mybatis/pages/mybatis-03.html">3、解决字段名与实体类属性名不相同的冲突</a>
     </div>
 </div>
 </body>
