--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -35,6 +35,7 @@
         <a href="mybatis/pages/mybatis-01.html">1、MyBatis介绍以及增删改查操作</a>
         <a href="mybatis/pages/mybatis-02.html">2、MyBatis配置文件的优化</a>
         <a href="mybatis/pages/mybatis-03.html">3、解决字段名与实体类属性名不相同的冲突</a>
+        <a href="mybatis/pages/mybatis-04.html">4、实现关联表查询</a>
     </div>
 </div>
 </body>
