--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -36,6 +36,8 @@
         <a href="mybatis/pages/mybatis-02.html">2、MyBatis配置文件的优化</a>
         <a href="mybatis/pages/mybatis-03.html">3、解决字段名与实体类属性名不相同的冲突</a>
         <a href="mybatis/pages/mybatis-04.html">4、实现关联表查询</a>
+        <a href="mybatis/pages/mybatis-05.html">5、MyBatis调用存储过程</a>
+        <a href="mybatis/pages/mybatis-06.html">6、MyBatis缓存详解</a>
     </div>
 </div>
 </body>
