--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -38,6 +38,7 @@
         <a href="mybatis/pages/mybatis-04.html">4、实现关联表查询</a>
         <a href="mybatis/pages/mybatis-05.html">5、MyBatis调用存储过程</a>
         <a href="mybatis/pages/mybatis-06.html">6、MyBatis缓存详解</a>
+        <a href="mybatis/pages/mybatis-07.html">7、MyBatis3.x与Spring4.x整合</a>
     </div>
 </div>
 </body>
