--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -40,6 +40,8 @@
         <a href="mybatis/pages/mybatis-06.html">6、MyBatis缓存详解</a>
         <a href="mybatis/pages/mybatis-07.html">7、MyBatis3.x与Spring4.x整合</a>
     </div>
+    <h3>Spring知识框架整理</h3>
+    <div></div>
 </div>
 </body>
 </html>
