--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -43,7 +43,7 @@
     <h3>Spring知识框架整理</h3>
     <div>
         <a href="spring/pages/spring-basic.html">一、Spring框架知识概述</a>
-         <a href="spring/pages/spring-ioc.html">一、SpringIoC控制反转</a>
+         <a href="spring/pages/spring-ioc.html">二、SpringIoC控制反转</a>
     </div>
 </div>
 </body>
